<resources>
    <string name="app_name" translatable="false">Midterm 07600470</string>
    <string name="login_to_facebook">Login To Facebook</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_to_story">Add to Story</string>
    <string name="viwe_as">Viwe As</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="more">More</string>
    <string name="goes_to">Goes to</string>
    <string name="lives_in">Lives in</string>
    <string name="from">From</string>
    <string name="login_failed">Invalid username or password</string>
    <string name="name_profile" translatable="false">Promlert Lovichit</string>
    <string name="live" translatable="false">กรุงเทพมหานคร</string>
    <string name="school" translatable="false">สวนกุหลาบวิทยาลัย</string>
</resources>
